--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="icon" type="icon" href="../assets/images/icon.png">
+<link rel="icon" type="icon" href="https://github.com/Geervan/SL-Security/blob/main/assets/images/icon.png?raw=true">
     <title>SL Security</title>
 
     <!-- Bootstrap core CSS -->
