--- a/payments.html
+++ b/payments.html
@@ -222,7 +222,7 @@
 <body>
 
   <div id="qr_paypal">
-    <img src="../assets/images/paypal_qr.png">
+    <img src="https://github.com/Geervan/SL-Security/blob/main/assets/images/paypal_qr.png?raw=true">
   </div>
   
 
