--- a/payments.html
+++ b/payments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="icon" href="../assets/images/icon.png">
+  <link rel="icon" type="icon" href="https://github.com/Geervan/SL-Security/blob/main/assets/images/icon.png?raw=true">
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Payment Form</title>
