Made the website sarcastic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="icon" type="icon" href="https://github.com/Geervan/SL-Security/blob/main/assets/images/icon.png?raw=true">
+<link rel="icon" type="icon" href="../assets/images/icon.png">
     <title>SL Security</title>
 
     <!-- Bootstrap core CSS -->
@@ -139,7 +139,7 @@ https://templatemo.com/tm-586-scholar
                     <!-- ***** Serach Start ***** -->
                     <div class="search-input">
                       <form id="search" action="#">
-                        <input type="text" placeholder="40% off on all products (Limited Time Only!!)" onfocus="window.location='#contact';" style="font-weight: 500;" />
+                        <input type="text" placeholder="60% off on all products (Limited Time Only!!)" onfocus="window.location='#contact';" style="font-weight: 500;" />
 
                         
                       </form>
@@ -235,7 +235,7 @@ https://templatemo.com/tm-586-scholar
             </div>
             <div class="main-content">
               <h4>Protection</h4>
-              <p> <strong>Each SL Security plan</strong> uses cutting-edge AI technology to detect and stop any type of online threat – even ones that haven’t been seen before.</p>
+              <p> <strong>Each SL Security plan</strong> uses cutting-edge AI technology to detect and stop any type of online threat – even ones that haven’t been seen before and also the ones it has seen in your system unlessss we put something there </p>
               <div class="main-button">
                 <a href="#">Read More</a>
               </div>
@@ -249,7 +249,7 @@ https://templatemo.com/tm-586-scholar
             </div>
             <div class="main-content">
               <h4>Performance</h4>
-              <p>Our security runs seamlessly in the background, giving you maximum protection while using minimal resources on your device. The SL Security <strong>Standard, Plus,</strong> and <strong>Premium</strong> plans consistently win top marks for performance in independent reviews</p>
+              <p>Our security runs seamlessly in the background without your knowledge,<strike>without</strike> with giving you maximum protection while using minimal(Coz thats what your device consists of) resources on your device. The SL Security <strong>Standard, Plus,</strong> and <strong>Premium</strong> plans consistently <strike>Grab your wallets</strike> win top marks for performance in independent reviews</p>
               <div class="main-button">
                 <a href="#section">Read More</a>
               </div>
@@ -263,7 +263,7 @@ https://templatemo.com/tm-586-scholar
             </div>
             <div class="main-content">
               <h4>Easy to use</h4>
-              <p>Antivirus software has been criticised in recent years for being almost as intrusive as the malware it’s supposed to protect you against. But we do security differently – putting you in control.</p>
+              <p>Antivirus software has been criticised(No Cap) in recent years for being almost as intrusive as the malware(How Tf did they know) it’s supposed to protect you against(Oh I thought otherwise). But we do security differently – putting our software in control 😏.</p>
               <div class="main-button">
                 <a href="#">Read More</a>
               </div>
@@ -287,7 +287,7 @@ https://templatemo.com/tm-586-scholar
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  Getting started with SL Security Softwares is simple. Just click the 'Download Now' button to install our software. You'll be guided through a quick and easy setup process, and our antivirus protection will be up and running in no time.
+                  Well firstly you should start by installing our software on your device and giving it full permissions to make it efficient <strike>and help us earn</strike> and We are SL Security truly believe in Actions speak Louder than Words
                 </div>
               </div>
             </div>
@@ -299,7 +299,7 @@ https://templatemo.com/tm-586-scholar
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  SL Security works seamlessly in the background to provide real-time protection against online threats. Our software automatically scans for and eliminates viruses, malware, and other malicious software, keeping your system safe and secure without interrupting your work
+                 Our Work begins the moment you begin installing <strong>Our software</strong>. Just click the download button and install our software you'll be guided through very quick and easy setup process and our anti virus protection will be up and running in no time, So quickly you wont even notice it
                 </div>
               </div>
             </div>
@@ -311,7 +311,7 @@ https://templatemo.com/tm-586-scholar
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  We're committed to providing top-tier protection with SL Security Services. Our advanced antivirus engine utilizes cutting-edge technology to detect and neutralize a wide range of threats. We also offer regular updates to ensure continuous protection against the latest online risks.
+                  To answer this question, you should begin by installing <strong>Our Software</strong>. We're committed to the genuine concern we have towards your <strike>Money</strike> devices, our antivirus engine utilises cutting edge technologyto detect and <strike>grab your juicy files and data</strike> neutral wide range of threats.
                 </div>
               </div>
             </div>
@@ -323,7 +323,7 @@ https://templatemo.com/tm-586-scholar
               </h2>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  We offer comprehensive customer support to all our users. Our dedicated support team is available 24/7 to assist you with any questions or concerns.
+                  We offer comprehensive customer support to all our users who begin their journey by <strong>Installing Our Software</strong>. Our dedicated support team(Me and My Co-Founder,We actually were a team of 4, but the other two left the company early...Poor them they wont enjoy the juicy profits we are going to earn,the moment you 🫵 install our software) is available 24/7(Coz we are unemployed) to assist you with any questions or concerns,which wont exist the moment you install our software and give it all it needs.
                 </div>
               </div>
             </div>
@@ -333,7 +333,7 @@ https://templatemo.com/tm-586-scholar
           <div class="section-heading">
             <h6>About Us</h6>
             <h2>What makes us so reliable?</h2>
-            <p>Our team of experts has decades of combined experience in the cybersecurity field. They've seen it all and can handle anything the internet throws your way.</p>
+            <p>Our team of experts(Me and My Co-Founder) has decades of combined experience in the cybersecurity field. Our Software has seen it all and can handle anything the internet/your device throws at us.</p>
             <div class="main-button">
               <a href="#">Discover More</a>
             </div>
@@ -372,7 +372,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/1m.png" alt=""></a>
-              <span class="category">Monthly</span>
+              <span class="category">Monthly(Peasants)</span>
               <span class="price"><h6><em>₹</em>299</h6></span>
             </div>
             <div class="down-content">
@@ -385,7 +385,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/1y.png" alt=""></a>
-              <span class="category">Yearly</span>
+              <span class="category">Yearly(My Good Sire!)</span>
               <span class="price"><h6><em>₹</em>1999</h6></span>
             </div>
             <div class="down-content">
@@ -398,7 +398,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/3m.png" alt=""></a>
-              <span class="category">Monthly</span>
+              <span class="category">Monthly(Peasants)</span>
               <span class="price"><h6><em>₹</em>799</h6></span>
             </div>
             <div class="down-content">
@@ -411,7 +411,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/2y.png" alt=""></a>
-              <span class="category">Yearly</span>
+              <span class="category">Yearly(My Good Sire!)</span>
               <span class="price"><h6 style="font-size: 25px;"><em>₹</em>2999</h6></span>
             </div>
             <div class="down-content">
@@ -424,7 +424,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/3y.png" alt=""></a>
-              <span class="category">Yearly</span>
+              <span class="category">Yearly(My Good Sire!)</span>
               <span class="price"><h6 style="font-size: 25px;"><em>₹</em>3999</h6></span>
             </div>
             <div class="down-content">
@@ -437,7 +437,7 @@ https://templatemo.com/tm-586-scholar
           <div class="events_item">
             <div class="thumb">
               <a href="#"><img src="assets/images/6m.png" alt=""></a>
-              <span class="category">Monthly</span>
+              <span class="category">Monthly(Peasants)</span>
               <span class="price"><h6><em>₹</em>1299</h6></span>
             </div>
             <div class="down-content">
@@ -458,26 +458,26 @@ https://templatemo.com/tm-586-scholar
             <div class="row">
               <div class="col-lg-3 col-md-6">
                 <div class="counter">
-                  <h2 class="timer count-title count-number" data-to="8200" data-speed="1000"></h2>
+                  <h2 class="timer count-title count-number" data-to="8000000" data-speed="1000"></h2>
                    <p class="count-text ">Satisfied Customers</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="counter">
-                  <h2 class="timer count-title count-number" data-to="709" data-speed="1000"></h2>
+                  <h2 class="timer count-title count-number" data-to="75376" data-speed="1000"></h2>
                   <p class="count-text ">Threats Quarantined</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="counter">
-                  <h2 class="timer count-title count-number" data-to="347" data-speed="1000"></h2>
-                  <p class="count-text ">Cyber Attacks Stopped</p>
+                  <h2 class="timer count-title count-number" data-to="10000" data-speed="1000"></h2>
+                  <p class="count-text ">Stopping Cyber Attacks Happening on your device currently</p>
                 </div>
               </div>
               <div class="col-lg-3 col-md-6">
                 <div class="counter end">
-                  <h2 class="timer count-title count-number" data-to="15" data-speed="1000"></h2>
-                  <p class="count-text ">Years Experience</p>
+                  <h2 class="timer count-title count-number" data-to="69"  data-speed="1000"></h2>
+                  <p class="count-text ">Years Experience 😏</p>
                 </div>
               </div>
             </div>
@@ -493,8 +493,9 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/at.jpg" alt="">
+              <img src="assets/images/ats.jpg" alt="">
               <div class="category">CEO & Co-Founder</div>
+              <p>Master of delegation (aka disappearing when actual work needs doing). Visionary? More like perpetually in a fog.</p>
               <h4>Atharv R Gachchi</h4>
               <ul class="social-icons">
                 <li><a href="https://www.instagram.com/kairoarg/" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -510,8 +511,9 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/g.jpg" alt="">
+              <img src="assets/images/gs.jpg" alt="">
               <div class="category">CTO & Co-Founder</div>
+              <p> Thinks in binary, communicates in grunts. Our website's continued existence is a daily miracle, not his skill.</p>
               <h4>Geervan K</h4>
               <ul class="social-icons">
                 <li><a href="https://www.instagram.com/geervan_09/" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -524,8 +526,9 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/r.jpg" alt="">
+              <img src="assets/images/rs.jpg" alt="">
               <div class="category">CMO</div>
+              <p>Master of the grand exit. His marketing strategy? Create a buzz, then buzz off. Clearly, his presence was so vital before the presentation, the actual event was just a footnote.</p>
               <h4>Rachit Gupta</h4>
               <ul class="social-icons">
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -538,8 +541,9 @@ https://templatemo.com/tm-586-scholar
         <div class="col-lg-3 col-md-6">
           <div class="team-member">
             <div class="main-content">
-              <img src="assets/images/a.jpg" alt="">
+              <img src="assets/images/as.jpg" alt="">
               <div class="category">CFO</div>
+              <p>The ultimate early bird. She counted the beans, declared them sufficient from afar, and then flew the coop. Why witness the fruits of her fiscal wisdom when she could be... elsewhere?</p>
               <h4>Ananya Maheshwari</h4>
               
               <ul class="social-icons">
@@ -590,9 +594,9 @@ https://templatemo.com/tm-586-scholar
         </div>
         <div class="col-lg-5 align-self-center">
           <div class="section-heading">
-            <h6>TESTIMONIALS</h6>
+            <h6>TESTIMONIALS(No Cap)</h6>
             <h2>What they say about us?</h2>
-            <img src="https://github.com/Geervan/SL-Security/blob/main/assets/images/awards.png?raw=true">
+            <img src="../assets/images/awards.png">
           </div>
         </div>
       </div>
@@ -715,11 +719,11 @@ https://templatemo.com/tm-586-scholar
           <div class="section-heading">
             <h6>Contact Us</h6>
             <h2>Feel free to contact us anytime</h2>
-            <p>Thank you for choosing our services.We work hard in our products and our customer satisfaction</p>
+            <p>Well honestly,you wont need to contact us because our software is so intuitive, you wont ever need our help and thats a promise</p>
             <div class="special-offer">
-              <span class="offer">off<br><em>40%</em></span>
+              <span class="offer">off<br><em>60%</em></span>
               <h6>Valid: <em>Limited Time Only!!</em></h6>
-              <h4>Special Offer <em>40%</em> OFF!</h4>
+              <h4>Special Offer <em>60%</em> OFF!</h4>
               <a href="#"><i class="fa fa-angle-right"></i></a>
             </div>
           </div>
@@ -745,7 +749,7 @@ https://templatemo.com/tm-586-scholar
                 </div>
                 <div class="col-lg-12">
                   <fieldset>
-                    <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                    <button type="submit" id="form-submit" class="orange-button">Send Message Now(Please dont 👉👈)</button>
                   </fieldset>
                 </div>
               </div>
