--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ https://templatemo.com/tm-586-scholar
           <div class="section-heading">
             <h6>TESTIMONIALS(No Cap)</h6>
             <h2>What they say about us?</h2>
-            <img src="../assets/images/awards.png">
+            <img src="https://github.com/Geervan/SL-Security/blob/main/assets/images/awards.png?raw=true">
           </div>
         </div>
       </div>
